RESOLVED FIXED307034
Address unchecked variables warnings in Source/WebKit on iOS
https://bugs.webkit.org/show_bug.cgi?id=307034
Summary Address unchecked variables warnings in Source/WebKit on iOS
Chris Dumez
Reported 2026-02-04 20:47:08 PST
Address unchecked variables warnings in Source/WebKit on iOS.
Attachments
Chris Dumez
Comment 1 2026-02-04 21:00:57 PST
EWS
Comment 2 2026-02-05 04:57:38 PST
Committed 306860@main (00303950b504): <https://commits.webkit.org/306860@main> Reviewed commits have been landed. Closing PR #57925 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-05 04:58:12 PST
Note You need to log in before you can comment on or make changes to this bug.